# chess-python

./: .flake8  .gitignore  README.md  agent.py  pyproject.toml  tree.py  tree_reference.py
.github/workflows/: PR.yml  python-publish.yml
chess_python/: chess.py  cli.py  game.py  utils.py
examples/: example_01.py
tests/: engine.py  test_end_of_game.py  test_engine.py  test_get_index_trajectory.py  test_tree.py  utils.py
