[tool.poetry]
name = "chess-python"
version = "0.1.0"
description = ""
authors = ["pacanada <pereirapcanada@gmail.com>"]
readme = "README.md"
packages = [{include = "chess_python"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
