[tool.poetry]
name = "chess-python-pip"
version = "0.1.7"
description = "Python implementation of the game of chess."
authors = ["pacanada <pereirapcanada@gmail.com>"]
readme = "README.md"
packages = [{include = "chess_python"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
snakeviz = "^2.1.1"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
